accessory now a boolean

--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -14,20 +14,22 @@
 
 <tbody>
   <% @tools.each do |tool| %>
-    <tr class="info">
-      <td><%= tool.name %></td>
-      <td><%= tool.kind %></td>
-      <td><%= tool.brand %></td>
-      <td><%= tool.owner[:f_name] %></td>
-    </tr>
-    <% unless tool.accessory.nil? %>
-      <tr>
-        <td></td>
-        <td><b>Accessory</b></td>
-        <td><%= tool.accessory[:kind]%></td>
-        <td><%= tool.accessory[:brand] %></td>
-        <td><%= tool.accessory[:name] %></td>
+    <% unless tool.isAccessory %>
+      <tr class="info">
+        <td><%= tool.name %></td>
+        <td><%= tool.kind %></td>
+        <td><%= tool.brand %></td>
+        <td><%= tool.owner[:f_name] %></td>
       </tr>
+      <% unless tool.accessory.nil? %>
+        <tr>
+          <td></td>
+          <td><b>Accessory</b></td>
+          <td><%= tool.accessory[:kind]%></td>
+          <td><%= tool.accessory[:brand] %></td>
+          <td><%= tool.accessory[:name] %></td>
+        </tr>
+      <% end %>
     <% end %>
   <% end %>
 </tbody>
