--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,21 @@
     </header>
     <main role="main">
        <%= render 'layouts/messages' %>
-       <%= yield %>
+       <div class="container">
+          <% flash.each do |key, value| %>
+            <div class="alert alert-<%= key %>">
+               <%= value %>
+            </div>
+         <% end %>
+      </div>
+
+      <%= yield :top_content %>
+
+      <div class="container">
+         <h1><%= yield :header %></h1>
+         <%= yield %>
+      </div>
+
     </main>
   </body>
 </html>
