--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,7 +1,15 @@
-<div class="jumbotron">
-  <h1>Welcome to the Shed</h1>
-</div>
 
+<% content_for :top_content do %>
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Welcome to the Shed!</h1>
+      <p>Register to get started.</p>
+      <p>
+        <%= link_to 'Register', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
+      </p>
+    </div>
+  </div>
+<% end %>
 
 
 <table class="table table-hover">
