--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <% header "Edit #{resource_name.to_s.humanize}" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages %>
+  <%= devise_error_messages! %>
 
   <div class="form-group">
      <%= f.label :name %>
