--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -2,7 +2,6 @@
 //  -----------------------------
 //
 //  Table of Contents:
-//
 //   1. Global
 //   2. Breakpoints
 //   3. The Grid
@@ -38,8 +37,10 @@
 //  33. Title Bar
 //  34. Tooltip
 //  35. Top Bar
+//  100. Stuff I added - jda
 
 @import 'util/util';
+
 
 // 1. Global
 // ---------
@@ -547,3 +548,77 @@ $topbar-padding: 0.5rem;
 $topbar-background: $light-gray;
 $topbar-title-spacing: 1rem;
 $topbar-input-width: 200px;
+
+
+
+// 100. Stuff I added - jda
+// ---------
+// colors added back from foundation 5
+$ghost       : #FAFAFA;
+$snow        : #F9F9F9;
+$vapor       : #F6F6F6;
+$white-smoke : #F5F5F5;
+$silver      : #EFEFEF;
+$smoke       : #EEEEEE;
+$gainsboro   : #DDDDDD;
+$iron        : #CCCCCC;
+$base        : #AAAAAA;
+$aluminum    : #999999;
+$jumbo       : #888888;
+$monsoon     : #777777;
+$steel       : #666666;
+$charcoal    : #555555;
+$tuatara     : #444444;
+$oil         : #333333;
+$jet         : #222222;
+
+// -----------------------------------------
+// Pricing tables are back! Using these for tool display
+// We use this to control the border color
+$price-table-border: solid 1px $gainsboro;
+
+// We use this to control the bottom margin of the pricing table
+$price-table-margin-bottom: rem-calc(20);
+
+// We use these to control the title styles
+$price-title-bg: $oil;
+$price-title-padding: rem-calc(15 20);
+$price-title-align: center;
+$price-title-color: $smoke;
+//$price-title-weight: $font-weight-normal;
+$price-title-size: rem-calc(16);
+$price-title-font-family: $body-font-family;
+
+// We use these to control the price styles
+$price-money-bg: $vapor;
+$price-money-padding: rem-calc(15 20);
+$price-money-align: center;
+$price-money-color: $oil;
+//$price-money-weight: $font-weight-normal;
+$price-money-size: rem-calc(32);
+$price-money-font-family: $body-font-family;
+
+
+// We use these to control the description styles
+$price-bg: $white;
+$price-desc-color: $monsoon;
+$price-desc-padding: rem-calc(15);
+$price-desc-align: center;
+$price-desc-font-size: rem-calc(12);
+//$price-desc-weight: $font-weight-normal;
+$price-desc-line-height: 1.4;
+$price-desc-bottom-border: dotted 1px $gainsboro;
+
+// We use these to control the list item styles
+$price-item-color: $oil;
+$price-item-padding: rem-calc(15);
+$price-item-align: center;
+$price-item-font-size: rem-calc(14);
+//$price-item-weight: $font-weight-normal;
+$price-item-bottom-border: dotted 1px $gainsboro;
+
+// We use these to control the CTA area styles
+$price-cta-bg: $white;
+$price-cta-align: center;
+$price-cta-padding: rem-calc(20 20 0);
+// -----------------------------------------
