--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -3,10 +3,11 @@
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
     <div class="row">
-      <div class="small-4 end">
-        <div data-alert class="alert-box <%= name.to_s == 'notice' ? 'success' : 'alert' %> round">
+      <div class="small-6 end">
+        <div data-closable class="callout small <%= name.to_s == 'notice' ? 'success' : 'alert' %> round">
           <%= content_tag :div, msg, :id => "flash_#{name}" %>
-          <a href="#" class="close">&times;</a>
+          <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+          <span aria-hidden="true">&times;</span>
         </div>
       </div>
     </div>
