--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,16 +1,18 @@
 
 <% content_for :top_content do %>
-      <h1><strong>Welcome to the Toolshed!</strong></h1>
+      <h1><strong>Your tools, master!</strong></h1>
 <% end %>
 
+<div class="row small-up-1 medium-up-2 large-up-4">
 <% @tools.each do |tool| %>
   <% unless tool.has_parent_tool? %> <!-- check to see if this is an accessory of another tool -->
-  <div class="container panel panel-default">
 
-    <div class="row panel">
-      <div class="col-md-2"><p class="text-info"><strong><%= tool.brand %></strong></p></div>
-      <div class="col-md-2"><p class="text-muted"><%= tool.kind %></p></div>
-      <div class="col-md-2"><p class="text-muted">Model #: <%= tool.model %></p></div>
+    <div class="column">
+      <ul class="pricing table">
+        <li class="description"><%= tool.kind %></li>
+        <li class="title"><%= tool.description %></li>
+        <li class="description"><%= tool.brand %> / Model #: <%= tool.model %></li>
+
     </div>
     <% if tool.nickname? %>
     <div class="row">
@@ -52,6 +54,6 @@
       </div>
     <% end %>
 
-  </div>
   <% end %>
 <% end %>
+</div>
