style clean up and accessory list

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,4 +14,4 @@
  */
 
 @import "foundation_and_overrides";
-@import url(https://fonts.googleapis.com/css?family=Biryani:300|Raleway:700,400);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic|Raleway:700,700italic);
